[tool.poetry]
name = "matchmaker"
version = "0.1.0"
description = ""
authors = ["thearyadev <personal@aryankothari.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
nextcord = "^2.5.0"
python-dotenv = "^1.0.0"
rich = "^13.4.2"
black = "^23.3.0"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.21.1"
pytest = "^7.4.0"
isort = "^5.12.0"
pillow = "^9.5.0"
snakeviz = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
